package com.example.coordination.entity;

public enum ProjectStateEnum {
    RECEIVED,
    ACCEPTED,
    REJECTED,
    IN_EXECUTION,
    CLOSED
}
